Priporocanje receptov po pogostosti sestavin, popravljeni repositiryji