@@ -1,27 +1,42 @@
 package com.example.controller;
 
-import com.example.model.Recept;
-import com.example.model.KorakPostopka;
-import com.example.model.Sestavine;
-import com.example.repository.ReceptRepository;
+import com.example.model.*;
+import com.example.repository.*;
 import com.example.service.ReceptService;
+import com.fasterxml.jackson.databind.ObjectMapper;
+
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
-import java.util.Comparator;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/recepti")
 public class ReceptController {
-    private final ReceptService receptService;
 
-    public ReceptController(ReceptService receptService) {
+    private final ReceptService receptService;
+    private final SestavineRepository sestavineRepository;
+    private final ReceptSestavineRepository receptSestavineRepository;
+    private final ObrokRepository obrokRepository;
+    private final RegionalnaKuhinjaRepository regionalnaKuhinjaRepository;
+    private final ReceptRepository receptRepository;
+
+    @Autowired
+    public ReceptController(ReceptService receptService,
+                            SestavineRepository sestavineRepository,
+                            ReceptSestavineRepository receptSestavineRepository,
+                            ObrokRepository obrokRepository,
+                            RegionalnaKuhinjaRepository regionalnaKuhinjaRepository,
+                            ReceptRepository receptRepository) {
         this.receptService = receptService;
+        this.sestavineRepository = sestavineRepository;
+        this.receptSestavineRepository = receptSestavineRepository;
+        this.obrokRepository = obrokRepository;
+        this.regionalnaKuhinjaRepository = regionalnaKuhinjaRepository;
+        this.receptRepository = receptRepository;
     }
 
     @GetMapping
@@ -38,7 +53,6 @@ public class ReceptController {
             map.put("slika", recept.getSlika());
             return map;
         }).collect(Collectors.toList());
-
         return ResponseEntity.ok(simplifiedRecepti);
     }
 
@@ -65,12 +79,7 @@ public class ReceptController {
                     // Format steps (koraki)
                     List<String> korakiFormatted = recept.getKoraki().stream()
                             .sorted(Comparator.comparingInt(KorakPostopka::getStKoraka)) // Sort steps by step number
-                            .map(korak -> {
-                                // Check and log any missing or null values
-                                System.out.println(
-                                        " | Step: " + korak.getPostopek());
-                                return korak.getPostopek();
-                            })
+                            .map(korak -> korak.getPostopek())
                             .toList();
                     receptDetails.put("koraki", korakiFormatted);
 
@@ -79,13 +88,141 @@ public class ReceptController {
                 .orElse(ResponseEntity.notFound().build());
     }
 
-    // API to create a recipe
+ @GetMapping("/priporoceni")
+public ResponseEntity<List<Map<String, Object>>> getRecommendedRecipes(@RequestParam("ogledaneSestavine") String ogledaneSestavineParam) {
+    // 1. Preverimo, ali imamo seznam sestavin ali samo eno
+    List<String> ogledaneSestavine;
+    try {
+        // Poskusimo parsirati, če gre za seznam sestavin
+        ogledaneSestavine = new ObjectMapper().readValue(ogledaneSestavineParam, List.class);
+    } catch (Exception e) {
+        // Če ni seznam, potem obravnavamo kot eno sestavino
+        ogledaneSestavine = Collections.singletonList(ogledaneSestavineParam);
+    }
+    
+    // 2. Poiščemo najpogostejše sestavine v poslanem seznamu
+    List<String> mostFrequentIngredients = getMostFrequentIngredients(ogledaneSestavine);
+
+    if (mostFrequentIngredients.isEmpty()) {
+        return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(null);
+    }
+
+    // 3. Poiščemo recepte, ki vsebujejo vsaj eno izmed najpogostejših sestavin
+    List<Recept> recommendedRecepti = receptService.findAll().stream()
+            .filter(recept -> containsAnyIngredient(recept, mostFrequentIngredients))
+            .collect(Collectors.toList());
+
+    // Omejimo število priporočil na 6
+    recommendedRecepti = recommendedRecepti.stream()
+            .limit(10)
+            .collect(Collectors.toList());
+
+    // 4. Pretvorimo filtrirane recepte v želeni odgovor
+    List<Map<String, Object>> simplifiedRecepti = recommendedRecepti.stream().map(recept -> {
+        Map<String, Object> map = new HashMap<>();
+        map.put("idRecept", recept.getIdRecept());
+        map.put("naziv", recept.getNaziv());
+        map.put("pripravaMinute", recept.getPripravaMinute());
+        map.put("steviloOseb", recept.getSteviloOseb());
+        map.put("tezavnost", recept.getTezavnost());
+        map.put("obrok", recept.getObrok() != null ? Map.of("naziv", recept.getObrok().getNaziv()) : null);
+        map.put("slika", recept.getSlika());
+        return map;
+    }).collect(Collectors.toList());
+
+    return ResponseEntity.ok(simplifiedRecepti);
+}
+
+private List<String> getMostFrequentIngredients(List<String> ogledaneSestavine) {
+    Map<String, Long> ingredientFrequency = ogledaneSestavine.stream()
+            .collect(Collectors.groupingBy(ingredient -> ingredient, Collectors.counting()));
+
+    Long maxFrequency = ingredientFrequency.values().stream()
+            .max(Long::compare).orElse(0L);
+
+    return ingredientFrequency.entrySet().stream()
+            .filter(entry -> entry.getValue().equals(maxFrequency))
+            .map(Map.Entry::getKey)
+            .collect(Collectors.toList());
+}
+
+private boolean containsAnyIngredient(Recept recept, List<String> ingredients) {
+    return recept.getSestavine().stream()
+            .anyMatch(sestavina -> ingredients.contains(sestavina.getNaziv().toLowerCase()));
+}
     @PostMapping
     public ResponseEntity<Recept> createRecept(@RequestBody Recept recept) {
         return ResponseEntity.ok(receptService.save(recept));
     }
 
-    // API to delete a recipe
+    @PostMapping("/dodaj")
+    public ResponseEntity<Recept> addRecept(@RequestBody Map<String, Object> receptRequest) {
+        try {
+            // Create basic recipe data
+            Recept recept = new Recept();
+            recept.setNaziv((String) receptRequest.get("naziv"));
+            recept.setOpis((String) receptRequest.get("opis"));
+            recept.setSlika((String) receptRequest.get("slika"));
+            recept.setPripravaMinute((Integer) receptRequest.get("pripravaMinute"));
+            recept.setSteviloOseb((Integer) receptRequest.get("steviloOseb"));
+            recept.setTezavnost((Integer) receptRequest.get("tezavnost"));
+
+            // Check and set meal and regional cuisine
+            Integer obrokId = (Integer) receptRequest.get("obrok");
+            Integer regionalnaKuhinjaId = (Integer) receptRequest.get("regionalnaKuhinja");
+
+            Obrok obrok = obrokRepository.findById(obrokId).orElseThrow(() -> new RuntimeException("Obrok not found"));
+            RegionalnaKuhinja regionalnaKuhinja = regionalnaKuhinjaRepository.findById(regionalnaKuhinjaId).orElseThrow(() -> new RuntimeException("Regionalna Kuhinja not found"));
+
+            recept.setObrok(obrok);
+            recept.setRegionalnaKuhinja(regionalnaKuhinja);
+
+            Recept savedRecept = receptService.save(recept);
+
+            // Add ingredients
+            List<Map<String, Object>> sestavineList = (List<Map<String, Object>>) receptRequest.get("sestavine");
+            if (sestavineList != null) {
+                for (Map<String, Object> sestavinaData : sestavineList) {
+                    String naziv = (String) sestavinaData.get("naziv");
+                    String enota = (String) sestavinaData.get("enota");
+                    Double kolicina = ((Number) sestavinaData.get("kolicina")).doubleValue();
+
+                    // Save ingredient in the Sestavine table
+                    Sestavine sestavina = sestavineRepository.findByNaziv(naziv)
+                            .orElseGet(() -> {
+                                Sestavine novaSestavina = new Sestavine();
+                                novaSestavina.setNaziv(naziv);
+                                novaSestavina.setEnota(enota);
+                                return sestavineRepository.save(novaSestavina);
+                            });
+
+                    // Save the connection in the intermediate table ReceptSestavine
+                    ReceptSestavine receptSestavine = new ReceptSestavine();
+                    receptSestavine.setRecept(savedRecept);
+                    receptSestavine.setSestavine(sestavina);
+                    receptSestavineRepository.save(receptSestavine);
+                }
+            }
+
+            // Add steps
+            List<Map<String, Object>> korakiList = (List<Map<String, Object>>) receptRequest.get("koraki");
+            if (korakiList != null) {
+                for (Map<String, Object> korakData : korakiList) {
+                    KorakPostopka korak = new KorakPostopka();
+                    korak.setStKoraka((Integer) korakData.get("stKoraka"));
+                    korak.setPostopek((String) korakData.get("postopek"));
+                    korak.setRecept(savedRecept);
+                    receptService.saveKorak(korak);
+                }
+            }
+
+            return ResponseEntity.ok(savedRecept);
+        } catch (Exception e) {
+            e.printStackTrace();
+            return ResponseEntity.badRequest().build();
+        }
+    }
+
     @DeleteMapping("/{id}")
     public ResponseEntity<Void> deleteRecept(@PathVariable Integer id) {
         receptService.deleteById(id);
@@ -98,23 +235,23 @@ public class ReceptController {
         List<Integer> receptIds = (List<Integer>) requestBody.get("receptIds");
         Integer steviloOseb = (Integer) requestBody.get("steviloOseb");
 
-        // Validacija vhodnih podatkov
-        if (receptIds == null || steviloOseb == null || steviloOseb <= 0) {
-            return ResponseEntity.badRequest().body(Map.of("error", "Neveljavni podatki v zahtevi"));
+        // Validate input data
+        if (receptIds == null || steviloOseb == null) {
+            return ResponseEntity.badRequest().body(Collections.singletonMap("message", "Invalid input"));
         }
 
-        // Klic metode iz servisa
-        List<Map<String, Object>> seznamNakupov = receptService.generateShoppingList(receptIds, steviloOseb);
+        Map<String, Double> shoppingList = new HashMap<>();
+        for (Integer receptId : receptIds) {
+            Recept recept = receptRepository.findById(receptId).orElseThrow(() -> new RuntimeException("Recept not found"));
 
-        // Oblikovanje odgovora
-        return ResponseEntity.ok(Map.of("seznamNakupov", seznamNakupov));
-    }
-    @Autowired
-    private ReceptRepository receptRepository;
+            for (ReceptSestavine receptSestavine : recept.getSestavine()) {
+                String sestavinaName = receptSestavine.getSestavine().getNaziv();
+                double kolicina = receptSestavine.getKolicina() * steviloOseb;
 
-    @GetMapping("/seznam")
-    public List<Recept> vrniSeznam() {
-        // Vrnite vse recepte iz baze
-        return receptRepository.findAll();
+                shoppingList.put(sestavinaName, shoppingList.getOrDefault(sestavinaName, 0.0) + kolicina);
+            }
+        }
+
+        return ResponseEntity.ok(Collections.singletonMap("shoppingList", shoppingList));
     }
 }
